@@ -70,6 +70,8 @@ Changes log
           into an "org.restlet.ext.servlet.internal" package to hide
           them from the public Javadocs as they should rarely be used
           directly by end users.
+        - Renamed ServerResource#exists property to "existing".
+          Suggested by Lars Heuer.
     - Miscellaneous
         - Component XML configuration has been moved into an Engine 
           ComponentXmlParser class.
